# akron

./: .gitignore  Cargo.toml  README.md
.github/: Info.plist.template  akron.desktop  akron.wxs.template  control.template  postinst
.github/workflows/: release.yml
akron-gui/: Cargo.toml
akron-gui/src/: app.rs  client.rs  config.rs  helpers.rs  main.rs  types.rs
akron-gui/src/pages/: mod.rs
akron-gui/src/pages/main/: home.rs  market.rs  mod.rs  receive.rs  send.rs  settings.rs  sign.rs  spaces.rs  state.rs
akron-gui/src/pages/setup/: mod.rs
akron-gui/src/widget/: base.rs  fee_rate.rs  form.rs  icon.rs  mod.rs  rect.rs  tabs.rs  text.rs  tx_result.rs
akrond/: Cargo.toml
akrond/src/: lib.rs  runner.rs
akrond/src/services/: mod.rs  spaces.rs  yuki.rs
assets/: akron.rgba  build.py  icons.rs
