[workspace]
resolver = "2"
members = ["akrond", "akron-gui"]

[workspace.package]
version = "0.0.2"
edition = "2021"

[profile.release]
lto = true

[workspace.dependencies]
spaces_client = { git = "https://github.com/spacesprotocol/spaces.git" }
spaces_protocol = { git = "https://github.com/spacesprotocol/spaces.git" }
spaces_wallet = { git = "https://github.com/spacesprotocol/spaces.git" }
