[package]
name = "akron-gui"
version.workspace = true
edition.workspace = true

[lints.clippy]
large_enum_variant = "allow"

[dependencies]
akrond = { path = "../akrond" }

spaces_client = { workspace = true }
spaces_protocol = { workspace = true }
spaces_wallet = { workspace = true }

tokio = { version = "1", default-features = false, features = ["fs"] }
iced = { version = "0.13.1", default-features = false, features = [
    "wgpu",
    "tiny-skia",
    "tokio",
    "qr_code",
    "advanced",
] }
jsonrpsee = { version = "0.22.5", features = ["http-client"] }
hex = "0.4.3"
rustc-hash = "1.1"
rfd = { version = "0.14", default-features = false, features = [
    "xdg-portal",
    "tokio",
] }
directories = "5.0"
serde = "1"
serde_json = "1"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls"] }
