[package]
name = "akrond"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.37.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
    "time",
    "signal",
    "net",
    "io-std",
    "io-util",
    "sync",
    "fs",
] }
anyhow = "1.0.86"
log = "0.4.21"
spaces_client = { workspace = true }
yuki = { git = "https://github.com/buffrr/yuki.git", features = ["default"] }
env_logger = "0.11.3"
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
futures-util = "0.3.31"
hex = "0.4.3"
directories = "6.0.0"
regex = "1.11.1"

[lib]
name = "akrond"
path = "src/lib.rs"

[[bin]]
name = "akrond"
path = "bin/akrond.rs"
